🤖 Transform AI Assistant into Autonomous AI Agent
Major Release v3.0.0 - 'The Agent Revolution'

✨ NEW FEATURES:
- 🧠 Agent Brain: Central decision-making system with goal-oriented behavior
- 📋 Task Manager: Intelligent task scheduling and execution
- 🧠 Agent Memory: Persistent learning and context management
- 📺 Terminal Integration: Real-time monitoring and command execution
- 🔧 Auto Error Fixer: Autonomous error detection and fixing
- 📊 Advanced Code Analyzer: Deep codebase analysis and dependency tracking

🚀 AUTONOMOUS CAPABILITIES:
- Self-operating mode for independent work
- Automatic error fixing with confidence-based decisions
- Real-time terminal monitoring and error detection
- Intelligent task decomposition and execution
- Learning from experience and user feedback
- Goal-oriented behavior with high-level task planning

🔧 TECHNICAL IMPROVEMENTS:
- Complete modular architecture rewrite
- Signal-based inter-component communication
- Enhanced AI provider support (OpenAI, Anthropic, Groq, Ollama)
- Robust error handling and recovery mechanisms
- Efficient memory management with persistence
- Comprehensive code quality metrics and analysis

This transforms the plugin from a simple assistant into a fully autonomous
AI coding agent capable of independent problem-solving and code improvement.

--- a/addons/ai_coding_assistant/plugin.cfg
+++ b/addons/ai_coding_assistant/plugin.cfg
@@ -1,8 +1,8 @@
 [plugin]
 
-name="AI Coding Assistant"
-description="Powerful AI-powered coding assistant with chat, code generation, templates, and multi-provider support for Godot 4.x"
-author="AI Assistant Team"
-version="2.0.0"
+name="AI Agent for Godot"
+description="Advanced AI coding agent with autonomous error fixing, terminal integration, codebase analysis, and intelligent task management for Godot 4.x"
+author="AI Agent Development Team"
+version="3.0.0"
 script="plugin.gd"
 icon="plugin_icon.svg"
