📁 Complete codebase reorganization with proper folder structure
🏗️ MAJOR REORGANIZATION:
- 📁 Moved all files to appropriate folders
- 🔗 Fixed all import paths and linking
- 📚 Updated documentation structure
- 🎨 Organized assets properly

📂 NEW FOLDER STRUCTURE:
- 🧠 core/ - AI agent intelligence (6 core modules)
- 🤖 ai/ - AI provider integration (3 modules)
- 🖥️ ui/ - User interface components (4 modules)
- 🔧 utils/ - Utility functions (4 modules)
- 📊 models/ - Data models (chat_message.gd)
- 📚 docs/ - All documentation files
- 🎨 assets/ - Icons and visual resources

🔧 TECHNICAL FIXES:
- ✅ Updated plugin.gd to use ui/ai_assistant_dock.gd
- ✅ Fixed plugin.cfg to use assets/plugin_icon.svg
- ✅ Updated all preload paths in ai_assistant_dock.gd
- ✅ Fixed ai_api_manager.gd imports
- ✅ Updated architecture documentation
- ✅ Enhanced README with project structure

🎯 BENEFITS:
- Clean separation of concerns
- Easy navigation and maintenance
- Professional project structure
- Scalable for future development
- Clear component relationships

This establishes a world-class codebase organization for the
AI Agent with proper modular architecture and maintainability.

--- a/addons/ai_coding_assistant/plugin.cfg
+++ b/addons/ai_coding_assistant/plugin.cfg
@@ -5,4 +5,4 @@ description="Advanced AI coding agent with autonomous error fixing, terminal int
 author="AI Agent Development Team"
 version="3.0.0"
 script="plugin.gd"
-icon="plugin_icon.svg"
+icon="assets/plugin_icon.svg"
