--- a/addons/ai_coding_assistant/plugin.cfg
+++ b/addons/ai_coding_assistant/plugin.cfg
@@ -1,8 +1,8 @@
 [plugin]
 
 name="AI Agent for Godot"
-description="Advanced AI coding agent with autonomous error fixing, terminal integration, codebase analysis, and intelligent task management for Godot 4.x"
-author="AI Agent Development Team"
+description="🤖 The World's First Autonomous AI Coding Agent for Godot - Features autonomous error fixing, real-time terminal monitoring, intelligent task management, and advanced codebase analysis. Supports OpenAI, Anthropic, Gemini, Ollama, and more."
+author="Grandpa EJ"
 version="3.0.0"
 script="plugin.gd"
 icon="assets/plugin_icon.svg"
