feat: Modern UI redesign with enhanced features
- ✨ Modern header with status indicators and connection status
- 🎨 Enhanced chat interface with message bubbles and icons
- ⚙️ Advanced collapsible settings panel with modern styling
- ⚡ Quick action buttons in grid layout with colorful styling
- 📊 Real-time progress indicators and typing indicators
- 🦙 Enhanced Ollama controls with temperature slider
- 🎯 Default provider set to Ollama with auto-detection
- 🔧 Improved message formatting with timestamps
- 💫 Professional dark theme with gradient backgrounds
- 🚀 Responsive design with better visual feedback

Status: UNSTABLE - Processing state needs fixing

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ exports/
 
 # Plugin development
 *.uid
-
+*.import
 # OS generated files
 .directory
 
@@ -99,3 +99,5 @@ saved_conversations/
 # Plugin specific
 ai_assistant_settings.cfg
 user_preferences.cfg
+Godot_v4*
+.godot
